# ayon-tools

./: pyproject.toml
ayon_tools/deploy/: __main__.py  connection.py  inspect.py  manage_git.py  tools.py  transfer.py  validators.py
ayon_tools/deploy/modules/: addons.py  anatomy.py  bundle.py  dep_packages.py  project.py  studio.py  users.py
ayon_tools/utils/: __init__.py  actions.py  applications.py  auth.py  configs.py
configs/: README.md
configs/addons/addon_name/: addon_name.py  info.json
configs/studios/studio_name/: studio.json
configs/studios/studio_name/addons/: bundle.json
configs/studios/studio_name/addons/addon_name/: studio_settings.json
configs/studios/studio_name/projects/demo_project_1/: anatomy.json  apps.json  project.json  simple_creators.json  statuses.json  tasks.json  templates.json
configs/studios/studio_name/projects/demo_project_1/addons/addon_name/: settings.json
configs/studios/studio_name/projects/demo_project_1/addons/addon_name/scripts/: callbacks.py  checkers.py
